--- a/home.html
+++ b/home.html
@@ -17,76 +17,168 @@
   --shadow:0 12px 30px rgba(16,24,40,0.08);
   --radius:14px;
 }
+
 *{box-sizing:border-box;margin:0;padding:0;font-family:Inter,ui-sans-serif,system-ui,-apple-system,"Segoe UI",Roboto,'Helvetica Neue',Arial;}
-html,body{height:100%;overflow:hidden;}
-body{
+html, body{
+  height:100%;
+  margin:0;
+  padding:0;
   background:linear-gradient(180deg,#f6fbff 0%,#e6eefc 100%);
-  display:flex;align-items:center;justify-content:center;
-  height:100vh;overflow:hidden;padding:24px;
 }
+
+body{
+  display:flex;
+  align-items:center;
+  justify-content:center;
+  padding:24px;
+  min-height:100vh;
+}
+
 .app{
-  width:100%;max-width:1100px;
-  height:100%;max-height:800px;
-  display:grid;grid-template-columns:320px 1fr;gap:20px;
+  width:100%;
+  max-width:1100px;
+  height:100%;
+  display:grid;
+  grid-template-columns:320px 1fr;
+  gap:20px;
+  overflow:hidden;
 }
 
 .panel{
-  background:var(--side);border-radius:var(--radius);
+  background:var(--side);
+  border-radius:var(--radius);
   box-shadow:var(--shadow);
-  display:flex;flex-direction:column;overflow:hidden;
+  display:flex;
+  flex-direction:column;
+  overflow:hidden;
 }
-.panel .header{padding:18px 16px;display:flex;align-items:center;gap:12px;border-bottom:1px solid rgba(15,23,42,0.04);}
+
+.panel .header{
+  padding:18px 16px;
+  display:flex;
+  align-items:center;
+  gap:12px;
+  border-bottom:1px solid rgba(15,23,42,0.04);
+}
+
 .panel .title{font-weight:700;color:#0f172a;font-size:16px;}
 .panel .subtitle{color:var(--muted);font-size:12px;margin-top:4px;}
-.search{padding:12px 14px;border-bottom:1px solid rgba(15,23,42,0.04);display:flex;gap:8px;align-items:center;}
-.search input{flex:1;border-radius:12px;padding:10px 12px;border:1px solid rgba(15,23,42,0.06);outline:none;background:#fbfdff;font-size:14px;color:#071133;transition:box-shadow .18s ease;}
+
+.search{
+  padding:12px 14px;
+  border-bottom:1px solid rgba(15,23,42,0.04);
+  display:flex;
+  gap:8px;
+  align-items:center;
+}
+
+.search input{
+  flex:1;
+  border-radius:12px;
+  padding:10px 12px;
+  border:1px solid rgba(15,23,42,0.06);
+  outline:none;
+  background:#fbfdff;
+  font-size:14px;
+  color:#071133;
+  transition:box-shadow .18s ease;
+}
+
 .search input:focus{box-shadow:0 6px 18px rgba(43,156,255,0.12);border-color:var(--primary-600);}
-.list{padding:12px;flex:1;overflow-y:auto;display:flex;flex-direction:column;gap:8px;scroll-behavior:smooth;}
-.contact{display:flex;align-items:center;gap:12px;padding:10px;border-radius:12px;cursor:pointer;transition:background .12s ease,transform .12s ease;}
+
+.list{
+  padding:12px;
+  flex:1;
+  overflow-y:auto;
+  display:flex;
+  flex-direction:column;
+  gap:8px;
+  scroll-behavior:smooth;
+}
+
+.contact{
+  display:flex;
+  align-items:center;
+  gap:12px;
+  padding:10px;
+  border-radius:12px;
+  cursor:pointer;
+  transition:background .12s ease,transform .12s ease;
+}
+
 .contact:hover{background:rgba(43,156,255,0.04);transform:translateY(-2px);}
 .contact.selected{background:linear-gradient(90deg,var(--primary) 0%,var(--primary-600) 100%);color:white;box-shadow:0 10px 30px rgba(43,156,255,0.12);}
+
 .avatar{width:48px;height:48px;border-radius:50%;object-fit:cover;box-shadow:0 6px 18px rgba(2,6,23,0.06);}
 .meta{display:flex;flex-direction:column;gap:4px;min-width:0;}
 .meta .name{font-weight:600;font-size:15px;color:#071133;white-space:nowrap;overflow:hidden;text-overflow:ellipsis;}
 .contact.selected .name{color:white;}
 .meta .last{color:var(--muted);font-size:13px;white-space:nowrap;overflow:hidden;text-overflow:ellipsis;}
 .contact.selected .last{color:rgba(255,255,255,0.9);}
+
 .chat{
   background:linear-gradient(180deg,#ffffff,#f7fbff);
-  border-radius:var(--radius);box-shadow:var(--shadow);
-  display:flex;flex-direction:column;overflow:hidden;
+  border-radius:var(--radius);
+  box-shadow:var(--shadow);
+  display:flex;
+  flex-direction:column;
+  overflow:hidden;
 }
-.chat .top{padding:14px 18px;display:flex;align-items:center;gap:12px;border-bottom:1px solid rgba(15,23,42,0.04);}
+
+.chat .top{
+  padding:14px 18px;
+  display:flex;
+  align-items:center;
+  gap:12px;
+  border-bottom:1px solid rgba(15,23,42,0.04);
+}
+
 .chat .top img{width:44px;height:44px;border-radius:50%;object-fit:cover;}
 .chat .who{display:flex;flex-direction:column;}
 .chat .n{font-weight:700;color:#071133;}
 .chat .s{font-size:13px;color:var(--muted);}
+
 .chat .body{
-  flex:1;overflow-y:auto;
-  padding:20px;display:flex;flex-direction:column;
+  flex:1;
+  overflow-y:auto;
+  padding:20px;
+  display:flex;
+  flex-direction:column;
   background:linear-gradient(180deg,#f7fbff00,#ffffff00);
   scroll-behavior:smooth;
-  min-height:0; 
+  min-height:0;
 }
+
 .messages{
-  display:flex;flex-direction:column;gap:8px;
-  width:100%;margin-top:auto;margin-bottom:auto;
+  display:flex;
+  flex-direction:column;
+  gap:8px;
+  width:100%;
+  margin-top:auto;
+  margin-bottom:auto;
 }
+
 .msg{display:inline-block;max-width:72%;padding:12px 14px;border-radius:18px;font-size:15px;line-height:1.3;box-shadow:0 6px 20px rgba(2,6,23,0.06);opacity:0;transform:translateY(8px);animation:pop .22s ease forwards;}
-@keyframes pop{to{opacity:1;transform:none;}}
 .msg.me{background:linear-gradient(180deg,var(--primary),var(--primary-600));color:white;align-self:flex-end;border-bottom-right-radius:6px;}
 .msg.other{background:#fff;color:#071133;align-self:flex-start;border-bottom-left-radius:6px;}
 .msg img{max-width:300px;border-radius:12px;display:block;}
 .placeholder{display:flex;align-items:center;justify-content:center;color:var(--muted);font-size:15px;}
+
 .composer{
   padding:12px;border-top:1px solid rgba(15,23,42,0.04);
   display:flex;gap:8px;align-items:center;
   background:linear-gradient(180deg,#ffffff,#f7fbff);
 }
-.input{flex:1;background:#f3f6ff;padding:10px 14px;border-radius:999px;display:flex;gap:8px;align-items:center;box-shadow:inset 0 1px 0 rgba(255,255,255,0.6);}
+
+.input{
+  flex:1;background:#f3f6ff;padding:10px 14px;border-radius:999px;display:flex;gap:8px;align-items:center;
+  box-shadow:inset 0 1px 0 rgba(255,255,255,0.6);
+}
+
 .input input{flex:1;border:none;background:transparent;outline:none;font-size:15px;color:#071133;}
 .icon-btn{width:44px;height:44px;border-radius:50%;display:flex;align-items:center;justify-content:center;cursor:pointer;border:none;background:transparent;color:var(--primary);font-size:18px;}
 .send{width:48px;height:44px;border-radius:12px;display:flex;align-items:center;justify-content:center;background:linear-gradient(180deg,var(--primary),var(--primary-600));color:white;font-size:18px;border:none;cursor:pointer;box-shadow:0 10px 24px rgba(43,156,255,0.14);}
+
 .typing-indicator {
   display: inline-flex;
   align-items: center;
@@ -101,20 +193,24 @@ body{
   animation: fadeInUp 0.25s cubic-bezier(.4,0,.2,1) forwards;
   transform-origin: bottom;
 }
+
 .typing-indicator.me {
   background: var(--primary, #3b82f6);
   color: #fff;
   align-self: flex-end;
 }
+
 .typing-indicator span.label {
   font-size: 0.85rem;
   font-weight: 500;
   white-space: nowrap;
 }
+
 .typing-dots {
   display: flex;
   gap: 4px;
 }
+
 .typing-dots span {
   width: 6px;
   height: 6px;
@@ -123,6 +219,7 @@ body{
   opacity: 0.3;
   animation: typingBounce 1.2s infinite ease-in-out;
 }
+
 .typing-dots span:nth-child(2) { animation-delay: 0.15s; }
 .typing-dots span:nth-child(3) { animation-delay: 0.3s; }
 
@@ -136,87 +233,26 @@ body{
   to { opacity: 1; transform: translateY(0) scale(1); }
 }
 
-@media (max-width:900px){
-  body{padding:12px;}
-  .app{grid-template-columns:1fr;gap:12px;max-width:720px;height:100%;max-height:none;}
-  .panel{order:2;min-height:35vh;max-height:40vh;border-radius:12px;overflow-y:auto;}
-  .chat{order:1;min-height:55vh;max-height:65vh;display:flex;flex-direction:column;}
-  .chat .body{flex:1;overflow-y:auto;-webkit-overflow-scrolling:touch;scroll-behavior:smooth;}
-  .messages{margin-bottom:auto;}
-}
-  .chat-actions {
-  margin-left: auto;
-  display: flex;
-  gap: 8px;
-  align-items: center;
-}
-.dialog {
-  position: fixed;
-  top: 0; left: 0; right: 0; bottom: 0;
-  background: rgba(15, 23, 42, 0.35);
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  z-index: 999;
-}
-.dialog-content {
-  background: white;
-  border-radius: 12px;
-  width: 320px;
-  max-height: 420px;
-  overflow-y: auto;
-  box-shadow: 0 10px 25px rgba(0,0,0,0.2);
-  animation: fadeInUp 0.25s ease;
-}
-.dialog-header {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 12px 16px;
-  border-bottom: 1px solid #e2e8f0;
-}
-.dialog-list {
-  padding: 12px;
-  display: flex;
-  flex-direction: column;
-  gap: 8px;
-}
-.dialog-user {
-  display: flex;
-  align-items: center;
-  gap: 10px;
-  padding: 8px;
-  border-radius: 10px;
-  background: #f8fafc;
-  cursor: pointer;
-  transition: 0.2s;
-}
-.dialog-user:hover {
-  background: #e0f2fe;
-  transform: scale(1.02);
-}
-.dialog-user img {
-  width: 40px; height: 40px; border-radius: 50%; object-fit: cover;
-}
-.dialog-user span {
-  font-weight: 500;
-  color: #0f172a;
-}
+@keyframes pop{to{opacity:1;transform:none;}}
+
 /* ---- CALL DIALOG ---- */
 .call-dialog {
   position: fixed;
   bottom: 20px; right: 20px;
-  width: 350px; height: 500px; /* bigger size */
+  width: 90%;
+  max-width: 400px;
+  height: 80%;
+  max-height: 700px;
   background: linear-gradient(145deg, #f9f9f9, #e0e0e0);
   border-radius: 20px;
   box-shadow: 0 15px 40px rgba(0,0,0,0.25);
-  display: flex; flex-direction: column; overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  overflow: hidden;
   animation: fadeIn 0.4s ease;
   z-index: 9999;
-  font-family: 'Segoe UI', sans-serif;
 }
 
-/* ---- HEADER ---- */
 .call-header {
   display: flex;
   justify-content: space-between;
@@ -259,7 +295,7 @@ body{
   color: #6b7280;
 }
 
-/* ---- BODY ---- */
+/* ---- CALL BODY ---- */
 .call-body {
   flex: 1;
   position: relative;
@@ -298,6 +334,8 @@ body{
   border-top-left-radius: 15px;
   border-top-right-radius: 15px;
   gap: 20px;
+  flex-shrink: 0;
+  overflow-x:auto;
 }
 
 .icon-btn {
@@ -332,6 +370,7 @@ body{
   display: flex;
   justify-content: space-around;
   gap: 20px;
+  flex-wrap: wrap;
 }
 
 .accept-btn, .decline-btn {
@@ -372,7 +411,19 @@ body{
   to { opacity:1; transform: translateY(0);}
 }
 
+/* ---- RESPONSIVE MOBILE ---- */
+@media (max-width:900px){
+  body{padding:12px;overflow:auto;}
+  .app{grid-template-columns:1fr;gap:12px;max-width:720px;height:auto;overflow:auto;}
+  .panel{order:2;min-height:35vh;max-height:40vh;border-radius:12px;overflow-y:auto;}
+  .chat{order:1;min-height:55vh;max-height:65vh;display:flex;flex-direction:column;overflow:auto;}
+  .chat .body{flex:1;overflow-y:auto;-webkit-overflow-scrolling:touch;scroll-behavior:smooth;}
+  .messages{margin-bottom:auto;}
+  .call-dialog{width:95%;height:85%;bottom:10px;right:2.5%;}
+  .call-actions{flex-wrap:wrap;}
+}
 </style>
+
 
 </head>
 <body>
@@ -1090,6 +1141,7 @@ startRealtime()
 </script> 
 </body>
 </html>
+
 
 
 
