--- a/home.html
+++ b/home.html
@@ -7,7 +7,7 @@
 <link rel="icon" href="hybrid.png" />
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 <style>
-:root {
+:root{
   --bg:#e6eefc;
   --side:#ffffff;
   --card:#ffffff;
@@ -17,93 +17,69 @@
   --shadow:0 12px 30px rgba(16,24,40,0.08);
   --radius:14px;
 }
-
-* {
+*{
   box-sizing:border-box;
   margin:0;
   padding:0;
   font-family:Inter,ui-sans-serif,system-ui,-apple-system,"Segoe UI",Roboto,'Helvetica Neue',Arial;
-}
-
-html,body {
-  height:100%;
-  overflow:hidden;
-  background:linear-gradient(180deg,#f6fbff 0%,#e6eefc 100%);
   scroll-behavior:smooth;
 }
-
-body {
+html,body{
+  height:100%;
+  overflow:auto; /* ✅ Allow scrolling globally */
+}
+body{
+  background:linear-gradient(180deg,#f6fbff 0%,#e6eefc 100%);
   display:flex;
   align-items:center;
   justify-content:center;
   min-height:100vh;
+  overflow:auto;
   padding:24px;
-  animation:fadeInBody .5s ease;
+  animation: bgPulse 6s infinite alternate ease-in-out;
 }
 
-@keyframes fadeInBody {
-  from {opacity:0;transform:translateY(20px);}
-  to {opacity:1;transform:none;}
-}
-
-/* ---- MAIN APP ---- */
-.app {
+/* ---- APP LAYOUT ---- */
+.app{
   width:100%;
   max-width:1100px;
-  height:90vh;
+  min-height:90vh;
   display:grid;
   grid-template-columns:320px 1fr;
   gap:20px;
-  overflow:hidden;
-  animation:fadeIn .4s ease;
+  transition: all 0.3s ease;
 }
 
-@keyframes fadeIn {
-  from {opacity:0;transform:translateY(20px);}
-  to {opacity:1;transform:none;}
-}
-
-/* ---- SIDE PANEL ---- */
-.panel {
+.panel{
   background:var(--side);
   border-radius:var(--radius);
   box-shadow:var(--shadow);
   display:flex;
   flex-direction:column;
   overflow:hidden;
-  transition:all .3s ease;
-  height:100%;
+  animation: floatUp 0.4s ease;
 }
 
-.panel .header {
+/* ---- PANEL HEADER ---- */
+.panel .header{
   padding:18px 16px;
   display:flex;
   align-items:center;
   gap:12px;
   border-bottom:1px solid rgba(15,23,42,0.04);
 }
+.panel .title{font-weight:700;color:#0f172a;font-size:16px;}
+.panel .subtitle{color:var(--muted);font-size:12px;margin-top:4px;}
 
-.panel .title {
-  font-weight:700;
-  color:#0f172a;
-  font-size:16px;
-}
-
-.panel .subtitle {
-  color:var(--muted);
-  font-size:12px;
-  margin-top:4px;
-}
-
-.search {
+/* ---- SEARCH ---- */
+.search{
   padding:12px 14px;
   border-bottom:1px solid rgba(15,23,42,0.04);
   display:flex;
   gap:8px;
   align-items:center;
 }
-
-.search input {
+.search input{
   flex:1;
   border-radius:12px;
   padding:10px 12px;
@@ -112,152 +88,90 @@ body {
   background:#fbfdff;
   font-size:14px;
   color:#071133;
-  transition:box-shadow .18s ease;
+  transition:box-shadow .18s ease, transform .18s ease;
 }
-
-.search input:focus {
+.search input:focus{
   box-shadow:0 6px 18px rgba(43,156,255,0.12);
   border-color:var(--primary-600);
+  transform:scale(1.02);
 }
 
-.list {
+/* ---- CONTACT LIST ---- */
+.list{
   padding:12px;
   flex:1;
   overflow-y:auto;
   display:flex;
   flex-direction:column;
   gap:8px;
-  scroll-behavior:smooth;
 }
-
-.contact {
+.contact{
   display:flex;
   align-items:center;
   gap:12px;
   padding:10px;
   border-radius:12px;
   cursor:pointer;
-  transition:background .12s ease,transform .12s ease;
+  transition:background .12s ease,transform .12s ease, box-shadow .18s ease;
 }
-
-.contact:hover {
+.contact:hover{
   background:rgba(43,156,255,0.04);
   transform:translateY(-2px);
+  box-shadow:0 6px 18px rgba(43,156,255,0.15);
 }
-
-.contact.selected {
+.contact.selected{
   background:linear-gradient(90deg,var(--primary) 0%,var(--primary-600) 100%);
   color:white;
-  box-shadow:0 10px 30px rgba(43,156,255,0.12);
+  box-shadow:0 10px 30px rgba(43,156,255,0.15);
 }
-
-.avatar {
-  width:48px;
-  height:48px;
-  border-radius:50%;
+.avatar{
+  width:48px;height:48px;border-radius:50%;
   object-fit:cover;
   box-shadow:0 6px 18px rgba(2,6,23,0.06);
+  transition:transform .2s ease;
 }
+.avatar:hover{transform:scale(1.06);}
+.meta{display:flex;flex-direction:column;gap:4px;min-width:0;}
+.meta .name{font-weight:600;font-size:15px;color:#071133;white-space:nowrap;overflow:hidden;text-overflow:ellipsis;}
+.contact.selected .name{color:white;}
+.meta .last{color:var(--muted);font-size:13px;white-space:nowrap;overflow:hidden;text-overflow:ellipsis;}
+.contact.selected .last{color:rgba(255,255,255,0.9);}
 
-.meta {
-  display:flex;
-  flex-direction:column;
-  gap:4px;
-  min-width:0;
-}
-
-.meta .name {
-  font-weight:600;
-  font-size:15px;
-  color:#071133;
-  white-space:nowrap;
-  overflow:hidden;
-  text-overflow:ellipsis;
-}
-
-.contact.selected .name {
-  color:white;
-}
-
-.meta .last {
-  color:var(--muted);
-  font-size:13px;
-  white-space:nowrap;
-  overflow:hidden;
-  text-overflow:ellipsis;
-}
-
-.contact.selected .last {
-  color:rgba(255,255,255,0.9);
-}
-
-/* ---- CHAT ---- */
-.chat {
+/* ---- CHAT AREA ---- */
+.chat{
   background:linear-gradient(180deg,#ffffff,#f7fbff);
   border-radius:var(--radius);
   box-shadow:var(--shadow);
   display:flex;
   flex-direction:column;
   overflow:hidden;
-  height:100%;
   min-height:0;
-  transition:all .3s ease;
+  animation: floatUp 0.5s ease;
 }
-
-.chat .top {
+.chat .top{
   padding:14px 18px;
   display:flex;
   align-items:center;
   gap:12px;
   border-bottom:1px solid rgba(15,23,42,0.04);
 }
-
-.chat .top img {
-  width:44px;
-  height:44px;
-  border-radius:50%;
-  object-fit:cover;
-  transition:all .3s ease;
+.chat .top img{
+  width:44px;height:44px;border-radius:50%;object-fit:cover;
+  box-shadow:0 4px 12px rgba(0,0,0,0.08);
 }
-
-.chat .who {
-  display:flex;
-  flex-direction:column;
-}
-
-.chat .n {
-  font-weight:700;
-  color:#071133;
-  transition:color .3s ease;
-}
-
-.chat .s {
-  font-size:13px;
-  color:var(--muted);
-}
-
-.chat .body {
+.chat .who{display:flex;flex-direction:column;}
+.chat .n{font-weight:700;color:#071133;}
+.chat .s{font-size:13px;color:var(--muted);}
+.chat .body{
   flex:1;
   overflow-y:auto;
   padding:20px;
   display:flex;
   flex-direction:column;
   background:linear-gradient(180deg,#f7fbff00,#ffffff00);
-  scroll-behavior:smooth;
-  min-height:0;
-  -webkit-overflow-scrolling:touch;
 }
-
-.messages {
-  display:flex;
-  flex-direction:column;
-  gap:8px;
-  width:100%;
-  margin-top:auto;
-  margin-bottom:auto;
-}
-
-.msg {
+.messages{display:flex;flex-direction:column;gap:8px;width:100%;margin-top:auto;}
+.msg{
   display:inline-block;
   max-width:72%;
   padding:12px 14px;
@@ -269,329 +183,196 @@ body {
   transform:translateY(8px);
   animation:pop .22s ease forwards;
 }
-
-@keyframes pop {
-  to {opacity:1;transform:none;}
-}
-
-.msg.me {
-  background:linear-gradient(180deg,var(--primary),var(--primary-600));
-  color:white;
-  align-self:flex-end;
-  border-bottom-right-radius:6px;
-}
-
-.msg.other {
-  background:#fff;
-  color:#071133;
-  align-self:flex-start;
-  border-bottom-left-radius:6px;
-}
-
-.msg img {
-  max-width:300px;
-  border-radius:12px;
-  display:block;
-}
-
-.placeholder {
-  display:flex;
-  align-items:center;
-  justify-content:center;
-  color:var(--muted);
-  font-size:15px;
-}
-
-.composer {
-  padding:12px;
-  border-top:1px solid rgba(15,23,42,0.04);
-  display:flex;
-  gap:8px;
-  align-items:center;
+@keyframes pop{to{opacity:1;transform:none;}}
+.msg.me{background:linear-gradient(180deg,var(--primary),var(--primary-600));color:white;align-self:flex-end;border-bottom-right-radius:6px;}
+.msg.other{background:#fff;color:#071133;align-self:flex-start;border-bottom-left-radius:6px;}
+.msg img{max-width:300px;border-radius:12px;display:block;}
+.placeholder{display:flex;align-items:center;justify-content:center;color:var(--muted);font-size:15px;}
+.composer{
+  padding:12px;border-top:1px solid rgba(15,23,42,0.04);
+  display:flex;gap:8px;align-items:center;
   background:linear-gradient(180deg,#ffffff,#f7fbff);
 }
+.input{flex:1;background:#f3f6ff;padding:10px 14px;border-radius:999px;display:flex;gap:8px;align-items:center;box-shadow:inset 0 1px 0 rgba(255,255,255,0.6);}
+.input input{flex:1;border:none;background:transparent;outline:none;font-size:15px;color:#071133;}
+.icon-btn{width:44px;height:44px;border-radius:50%;display:flex;align-items:center;justify-content:center;cursor:pointer;border:none;background:transparent;color:var(--primary);font-size:18px;transition:transform .2s ease;}
+.icon-btn:hover{transform:scale(1.1);}
+.send{width:48px;height:44px;border-radius:12px;display:flex;align-items:center;justify-content:center;background:linear-gradient(180deg,var(--primary),var(--primary-600));color:white;font-size:18px;border:none;cursor:pointer;box-shadow:0 10px 24px rgba(43,156,255,0.14);}
+.send:hover{transform:scale(1.05);}
 
-.input {
-  flex:1;
-  background:#f3f6ff;
-  padding:10px 14px;
-  border-radius:999px;
-  display:flex;
-  gap:8px;
+/* ---- TYPING ---- */
+.typing-indicator {
+  display:inline-flex;
   align-items:center;
-  box-shadow:inset 0 1px 0 rgba(255,255,255,0.6);
+  gap:6px;
+  background:#ffffff;
+  color:#0b132b;
+  padding:8px 12px;
+  border-radius:16px;
+  box-shadow:0 2px 10px rgba(11,19,43,0.08);
+  margin:2px 0;
+  max-width:85%;
+  animation:fadeInUp 0.25s cubic-bezier(.4,0,.2,1) forwards;
 }
-
-.input input {
-  flex:1;
-  border:none;
-  background:transparent;
-  outline:none;
-  font-size:15px;
-  color:#071133;
+.typing-indicator.me{background:var(--primary,#3b82f6);color:#fff;align-self:flex-end;}
+.typing-indicator span.label{font-size:.85rem;font-weight:500;}
+.typing-dots{display:flex;gap:4px;}
+.typing-dots span{
+  width:6px;height:6px;border-radius:50%;background:currentColor;
+  opacity:.3;animation:typingBounce 1.2s infinite ease-in-out;
 }
+.typing-dots span:nth-child(2){animation-delay:.15s;}
+.typing-dots span:nth-child(3){animation-delay:.3s;}
+@keyframes typingBounce{0%,80%,100%{transform:translateY(0);opacity:.3;}40%{transform:translateY(-4px);opacity:1;}}
+@keyframes fadeInUp{from{opacity:0;transform:translateY(6px) scale(0.96);}to{opacity:1;transform:translateY(0) scale(1);}}
 
-.icon-btn {
-  width:48px;
-  height:48px;
-  border-radius:50%;
-  display:flex;
-  align-items:center;
-  justify-content:center;
-  margin-left:auto; 
-  cursor:pointer;
-  border:none;
-  background:#f3f6ff; 
-  color:var(--primary);
-  font-size:18px;
-  box-shadow:0 2px 8px rgba(0,0,0,0.1);
-  transition:all .25s ease;
-}
-
-.icon-btn:hover {
-  background:var(--primary);
-  color:#fff;
-  transform:scale(1.12) translateY(-2px);
-}
-
-
-.send {
-  width:48px;
-  height:44px;
-  border-radius:12px;
-  display:flex;
-  align-items:center;
-  justify-content:center;
-  background:linear-gradient(180deg,var(--primary),var(--primary-600));
-  color:white;
-  font-size:18px;
-  border:none;
-  cursor:pointer;
-  box-shadow:0 10px 24px rgba(43,156,255,0.14);
-  transition:transform .2s ease;
-}
-
-.send:hover {
-  transform:scale(1.05);
+/* ---- RESPONSIVE ---- */
+@media (max-width:900px){
+  body{padding:10px;align-items:flex-start;}
+  .app{
+    grid-template-columns:1fr;
+    gap:12px;
+    max-width:720px;
+    min-height:auto;
+  }
+  .panel{
+    order:2;
+    min-height:35vh;
+    max-height:none;
+    border-radius:12px;
+    overflow:auto;
+  }
+  .chat{
+    order:1;
+    min-height:55vh;
+    max-height:none;
+    display:flex;
+    flex-direction:column;
+  }
+  .chat .body{
+    flex:1;
+    overflow-y:auto;
+    -webkit-overflow-scrolling:touch;
+  }
+  .call-dialog{
+    position:fixed;
+    bottom:0;
+    top:auto;
+    right:0;
+    left:0;
+    width:100%;
+    height:90vh;
+    border-radius:20px 20px 0 0;
+    animation:slideUp 0.4s ease;
+  }
 }
 
 /* ---- CALL DIALOG ---- */
 .call-dialog {
-  position:fixed;
-  bottom:20px;
-  right:20px;
-  width:350px;
-  height:500px;
-  background:linear-gradient(145deg,#f9f9f9,#e0e0e0);
-  border-radius:20px;
-  box-shadow:0 15px 40px rgba(0,0,0,0.25);
-  display:flex;
-  flex-direction:column;
-  overflow:hidden;
-  animation:fadeIn .4s ease;
-  z-index:9999;
-  font-family:'Segoe UI',sans-serif;
-  transition:all .3s ease;
+  position: fixed;
+  bottom: 20px; right: 20px;
+  width: 350px; height: 500px;
+  background: linear-gradient(145deg, #f9f9f9, #e0e0e0);
+  border-radius: 20px;
+  box-shadow: 0 15px 40px rgba(0,0,0,0.25);
+  display: flex; flex-direction: column; overflow: hidden;
+  animation: fadeIn 0.4s ease;
+  z-index: 9999;
 }
 
+/* ---- HEADER ---- */
 .call-header {
-  display:flex;
-  justify-content:space-between;
-  align-items:center;
-  padding:15px 20px;
-  background:#fff;
+  display:flex;justify-content:space-between;align-items:center;
+  padding:15px 20px;background:#fff;
   box-shadow:0 3px 6px rgba(0,0,0,0.1);
-  border-bottom-left-radius:20px;
-  border-bottom-right-radius:20px;
-  animation:fadeSlideDown .4s ease;
+  border-bottom-left-radius:20px;border-bottom-right-radius:20px;
 }
-
-@keyframes fadeSlideDown {
-  from {opacity:0;transform:translateY(-15px);}
-  to {opacity:1;transform:none;}
-}
-
 .call-header .profile {
-  display:flex;
-  align-items:center;
-  gap:12px;
+  display:flex;align-items:center;gap:12px;
+  animation: fadeInUp 0.4s ease;
 }
-
 .call-header .profile img {
-  width:55px;
-  height:55px;
-  border-radius:50%;
-  border:3px solid #10b981;
-  object-fit:cover;
-  box-shadow:0 4px 15px rgba(0,0,0,0.15);
-  transition:all .3s ease;
+  width:60px;height:60px;border-radius:50%;
+  border:2px solid #10b981;object-fit:cover;
+  box-shadow:0 4px 15px rgba(0,0,0,0.2);
+  transition:transform .25s ease, box-shadow .25s ease;
 }
-
 .call-header .profile img:hover {
-  transform:scale(1.05);
+  transform:scale(1.08);
+  box-shadow:0 6px 20px rgba(0,0,0,0.3);
 }
-
 .call-header .profile .name-status {
-  display:flex;
-  flex-direction:column;
-  line-height:1.2;
+  display:flex;flex-direction:column;line-height:1.2;
 }
-
 .call-header .profile .name-status .name {
-  font-weight:700;
-  font-size:17px;
-  color:#111827;
+  font-weight:700;font-size:17px;color:#111827;
+  animation: fadeInUp 0.5s ease;
 }
-
 .call-header .profile .name-status .status {
-  font-size:13px;
-  color:#6b7280;
+  font-size:12px;color:#6b7280;
 }
 
+/* ---- BODY ---- */
 .call-body {
-  flex:1;
-  position:relative;
-  background:#000;
-  border-radius:15px;
-  overflow:hidden;
+  flex:1;position:relative;background:#000;border-radius:15px;overflow:hidden;
 }
-
 .call-body video {
-  width:100%;
-  height:100%;
-  object-fit:cover;
-  border-radius:15px;
-  background:#000;
+  width:100%;height:100%;object-fit:cover;border-radius:15px;background:#000;
 }
-
 #localVideo {
-  width:100px;
-  height:140px;
-  position:absolute;
-  top:15px;
-  right:15px;
-  border-radius:12px;
-  border:3px solid #fff;
+  width:100px;height:140px;position:absolute;top:15px;right:15px;
+  border-radius:12px;border:3px solid #fff;
   box-shadow:0 4px 15px rgba(0,0,0,0.25);
-  object-fit:cover;
 }
 
+/* ---- CALL ACTIONS ---- */
 .call-actions {
-  display:flex;
-  justify-content:space-around;
-  align-items:center;
-  padding:15px 0;
-  background:#f9fafb;
-  border-top-left-radius:15px;
-  border-top-right-radius:15px;
-  gap:20px;
+  display:flex;justify-content:space-around;align-items:center;
+  padding:15px 0;background:#f9fafb;gap:20px;
 }
-
 .icon-btn {
-  background:#fff;
-  border-radius:50%;
-  width:50px;
-  height:50px;
-  display:flex;
-  justify-content:center;
-  align-items:center;
-  font-size:20px;
-  cursor:pointer;
-  transition:all 0.2s ease;
+  background:#fff;border-radius:50%;width:50px;height:50px;
+  display:flex;justify-content:center;align-items:center;font-size:20px;
+  cursor:pointer;transition:all .2s ease;
   box-shadow:0 4px 12px rgba(0,0,0,0.15);
 }
-
 .icon-btn:hover {
   transform:scale(1.1);
   box-shadow:0 6px 18px rgba(0,0,0,0.25);
 }
+.end-call {background:#ef4444;color:#fff;}
 
-.end-call {
-  background:#ef4444;
-  color:#fff;
-}
-
+/* ---- INCOMING ACTIONS ---- */
 .incoming-actions {
-  position:absolute;
-  bottom:30px;
-  width:100%;
-  display:flex;
-  justify-content:space-around;
-  gap:20px;
+  position:absolute;bottom:30px;width:100%;
+  display:flex;justify-content:space-around;gap:20px;
 }
-
-.accept-btn,
-.decline-btn {
-  padding:12px 28px;
-  border-radius:30px;
-  font-weight:600;
-  border:none;
-  cursor:pointer;
-  font-size:15px;
-  transition:all 0.2s ease;
+.accept-btn,.decline-btn {
+  padding:12px 28px;border-radius:30px;font-weight:600;
+  border:none;cursor:pointer;font-size:15px;transition:all .2s ease;
 }
-
 .accept-btn {
-  background:#10b981;
-  color:#fff;
+  background:#10b981;color:#fff;
   box-shadow:0 4px 12px rgba(16,185,129,0.3);
 }
-
 .accept-btn:hover {
   transform:scale(1.05);
   box-shadow:0 6px 18px rgba(16,185,129,0.45);
 }
-
 .decline-btn {
-  background:#ef4444;
-  color:#fff;
+  background:#ef4444;color:#fff;
   box-shadow:0 4px 12px rgba(239,68,68,0.3);
 }
-
 .decline-btn:hover {
   transform:scale(1.05);
   box-shadow:0 6px 18px rgba(239,68,68,0.45);
 }
 
-/* ---- RESPONSIVE ---- */
-@media (max-width:900px){
-  body {
-    padding:12px;
-    overflow:auto;
-    align-items:flex-start;
-  }
-  .app {
-    grid-template-columns:1fr;
-    gap:12px;
-    max-width:720px;
-    height:auto;
-    display:flex;
-    flex-direction:column;
-  }
-  .panel {
-    order:2;
-    min-height:35vh;
-    max-height:40vh;
-    border-radius:12px;
-    overflow-y:auto;
-  }
-  .chat {
-    order:1;
-    min-height:55vh;
-    max-height:none;
-  }
-  .chat .body {
-    flex:1;
-    overflow-y:auto;
-  }
-  .call-dialog {
-    width:90%;
-    height:auto;
-    bottom:10px;
-    right:5%;
-    border-radius:18px;
-  }
-}
+/* ---- ANIMATIONS ---- */
+@keyframes fadeIn {from{opacity:0;transform:translateY(25px);}to{opacity:1;transform:translateY(0);}}
+@keyframes slideUp {from{transform:translateY(100%);}to{transform:translateY(0);}}
+@keyframes bgPulse {0%{background:linear-gradient(180deg,#f6fbff 0%,#e6eefc 100%);}100%{background:linear-gradient(180deg,#e9f3ff 0%,#dae5fb 100%);}}
+@keyframes floatUp {from{opacity:0;transform:translateY(10px);}to{opacity:1;transform:translateY(0);}}
 </style>
 
 
@@ -1311,6 +1092,7 @@ startRealtime()
 </script> 
 </body>
 </html>
+
 
 
 
