--- a/index.html
+++ b/index.html
@@ -1,195 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width,initial-scale=1">
-<title>Realtime Chat — Hybrid</title>
-<link rel="icon" type="image/png" href="hybrid.png">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
-
-<style>
-:root {
-  --accent: #6366f1;
-  --accent-hover: #4f46e5;
-  --bg1: #eef2ff;
-  --bg2: #f8fafc;
-  --white: #ffffff;
-  --shadow: rgba(0,0,0,0.12);
-  --text: #1e293b;
-  --muted: #6b7280;
-  --radius: 20px;
-}
-
-/* Reset */
-* { box-sizing: border-box; margin:0; padding:0; font-family:"Inter",system-ui,sans-serif; }
-
-/* Background gradient animation */
-body {
-  height: 100vh;
-  background: linear-gradient(135deg, var(--bg1), var(--bg2));
-  background-size: 300% 300%;
-  animation: gradientShift 10s ease-in-out infinite;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  overflow: hidden;
-}
-@keyframes gradientShift {
-  0%,100% { background-position: left top; }
-  50% { background-position: right bottom; }
-}
-
-/* Floating icons (background animation) */
-.floating {
-  position: absolute;
-  font-size: 36px;
-  color: var(--accent);
-  opacity: 0.1;
-  animation: floaty 12s ease-in-out infinite;
-}
-.floating:nth-child(1) { top: 10%; left: 15%; animation-delay:0s; }
-.floating:nth-child(2) { bottom: 20%; right: 10%; animation-delay:3s; }
-.floating:nth-child(3) { top: 50%; right: 20%; animation-delay:6s; }
-.floating:nth-child(4) { bottom: 15%; left: 25%; animation-delay:9s; }
-@keyframes floaty { 0%,100%{transform:translateY(0);}50%{transform:translateY(-25px);} }
-
-/* Card */
-.chat-card {
-  background: var(--white);
-  padding: 48px 36px;
-  border-radius: var(--radius);
-  width: 90%;
-  max-width: 440px;
-  box-shadow: 0 25px 50px var(--shadow);
-  text-align: center;
-  position: relative;
-  z-index: 5;
-  transform: translateY(40px);
-  opacity:0;
-  animation: fadeInCard 1s ease forwards;
-}
-@keyframes fadeInCard { to { opacity:1; transform:translateY(0);} }
-
-.chat-card h1 {
-  font-size: 32px;
-  font-weight: 700;
-  color: var(--text);
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  gap: 12px;
-}
-.chat-card h1 i {
-  color: var(--accent);
-  animation: pulse 2s infinite;
-}
-@keyframes pulse { 0%,100%{transform:scale(1);opacity:0.9;}50%{transform:scale(1.2);opacity:1;} }
-
-.chat-card p {
-  color: var(--muted);
-  font-size: 15px;
-  margin-top: 12px;
-  line-height:1.5;
-}
-
-/* Buttons */
-.button-group {
-  display:flex;
-  flex-direction:column;
-  gap:16px;
-  margin-top:28px;
-}
-.button-group button {
-  padding:16px 22px;
-  font-size:16px;
-  font-weight:600;
-  border-radius:14px;
-  border:none;
-  cursor:pointer;
-  transition:0.3s ease;
-  box-shadow:0 6px 16px rgba(99,102,241,0.2);
-}
-#startBtn { background: var(--accent); color:#fff; }
-#startBtn:hover { background: var(--accent-hover); transform: translateY(-2px); }
-#removeBtn { background:#f87171; color:#fff; }
-#removeBtn:hover { background:#ef4444; transform: translateY(-2px); }
-
-/* Footer */
-footer { margin-top:28px; font-size:13px; color: var(--muted); letter-spacing:0.3px; }
-
-/* Card glow */
-.chat-card::before {
-  content:"";
-  position:absolute;
-  inset:-4px;
-  border-radius:var(--radius);
-  background: linear-gradient(45deg, var(--accent), #a78bfa, #60a5fa, var(--accent));
-  background-size:400% 400%;
-  z-index:-1;
-  filter: blur(10px);
-  animation: glow 8s linear infinite;
-  opacity:0.12;
-}
-@keyframes glow { 0%{background-position:0% 50%;}50%{background-position:100% 50%;}100%{background-position:0% 50%;} }
-</style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <title>Realtime Chat — Hybrid</title>
+  <link rel="icon" type="image/png" href="hybrid.png">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+  <link rel="stylesheet" href="index.css">
 </head>
 <body>
 
-<!-- Floating icons -->
-<i class="fa-solid fa-bolt floating"></i>
-<i class="fa-solid fa-comments floating"></i>
-<i class="fa-solid fa-cloud floating"></i>
-<i class="fa-solid fa-paper-plane floating"></i>
+  <i class="fa-solid fa-bolt floating"></i>
+  <i class="fa-solid fa-comments floating"></i>
+  <i class="fa-solid fa-cloud floating"></i>
+  <i class="fa-solid fa-paper-plane floating"></i>
 
-<!-- Card -->
-<div class="chat-card" id="chatCard">
-  <h1><i class="fas fa-comment-dots"></i> Realtime Chat</h1>
-  <p id="info">Connect instantly with friends, anytime and anywhere.</p>
+  <div class="chat-card" id="chatCard">
+    <h1><i class="fas fa-comment-dots"></i> Realtime Chat</h1>
+    <p id="info">Connect instantly with friends, anytime and anywhere.</p>
 
-  <div class="button-group">
-    <button id="startBtn"><i class="fas fa-paper-plane"></i> Get Started</button>
+    <div class="button-group">
+      <button id="startBtn"><i class="fas fa-paper-plane"></i> Get Started</button>
+    </div>
+
+    <footer>© 2025 Dominex Macedon</footer>
   </div>
 
-  <footer>© 2025 Dominex Macedon</footer>
-</div>
-
-<script>
-const info = document.getElementById('info');
-const buttonsDiv = document.querySelector('.button-group');
-const startBtn = document.getElementById('startBtn');
-const profileData = localStorage.getItem('hc_profile');
-
-if (profileData) {
-  const profile = JSON.parse(profileData);
-  info.innerHTML = `<i class="fas fa-user-circle"></i> Logged in as <b>${profile.name}</b>`;
-
-  const removeBtn = document.createElement('button');
-  removeBtn.id = 'removeBtn';
-  removeBtn.innerHTML = '<i class="fas fa-trash"></i> Remove Account';
-  buttonsDiv.appendChild(removeBtn);
-
-  removeBtn.addEventListener('click', () => {
-    localStorage.removeItem('hc_profile');
-    localStorage.removeItem('hc_chat');
-    location.reload();
-  });
-
-  startBtn.innerHTML = '<i class="fas fa-comments"></i> Continue Chat';
-  startBtn.addEventListener('click', () => window.location.href = 'home.html');
-} else {
-  startBtn.addEventListener('click', () => window.location.href = 'register.html');
-}
-
-/* Disable inspect */
-document.addEventListener('contextmenu', e => e.preventDefault());
-document.addEventListener('keydown', e => {
-  if (
-    e.key === 'F12' ||
-    (e.ctrlKey && e.shiftKey && ['I','J','C'].includes(e.key.toUpperCase())) ||
-    (e.ctrlKey && ['U','S','P'].includes(e.key.toUpperCase()))
-  ) { e.preventDefault(); e.stopPropagation(); }
-});
-</script>
-
+  <script src="index.js"></script>
 </body>
 </html>
