--- a/translate.html
+++ b/translate.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Chat Viewer</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
-  <link rel="stylesheet" href="chat-viewer.css">
+  <link rel="stylesheet" href="translate.css">
 </head>
 <body>
 
@@ -17,6 +17,6 @@
 
   <div id="chatContainer" class="empty"></div>
 
-  <script src="chat-viewer.js"></script>
+  <script src="translate.js"></script>
 </body>
 </html>
