--- a/home.html
+++ b/home.html
@@ -46,7 +46,10 @@
     <div id="onlineList" class="dialog-list"></div>
   </div>
 </div>
-  
+  <button id="startBtn" class="icon-btn start-icon" title="Start">
+  <i class="fas fa-play"></i>
+</button>
+
 <div class="app" id="app">
   <div class="panel" id="sidebar">
     <div class="header">
@@ -98,3 +101,4 @@
 <script type="module" src="home.js"></script>
 </body>
 </html>
+
