--- a/home.html
+++ b/home.html
@@ -10,7 +10,6 @@
 </head>
 <body>
   
-<!-- Video/Voice Call Dialog -->
 <div id="callDialog" class="call-dialog" style="display:none;">
   <div class="call-header">
     <div class="peer-info">
@@ -46,9 +45,14 @@
     <div id="onlineList" class="dialog-list"></div>
   </div>
 </div>
-  <button id="startBtn" class="icon-btn start-icon" title="Start">
-  <i class="fas fa-play"></i>
+ <button id="startBtn" class="icon-btn start-icon" title="Start">
+  <i class="fas fa-robot"></i>
 </button>
+
+<div id="assistDialog" class="assist-dialog" style="display:none;">
+  <iframe id="assistFrame" src="hybridassist.html"></iframe>
+</div>
+
 
 <div class="app" id="app">
   <div class="panel" id="sidebar">
@@ -101,4 +105,5 @@
 <script type="module" src="home.js"></script>
 </body>
 </html>
+
 
