--- a/hybridassist.html
+++ b/hybridassist.html
@@ -395,8 +395,8 @@ window.addEventListener('beforeunload',clearChat);
   <div style="color:var(--muted)">Ask me about knowledge, apps, websites, celebrities, images <i class="fa-solid fa-image"></i>.</div>
   <div style="color:#dc2626;margin-top:6px;font-weight:600;">Disclaimer: You cannot ask for videos. I provide insights, web search, and images. If you want to ask for videos also, you'll need to use Hybrid Browser Desktop. visit https://downloadhybrid.pages.dev/ </div>
   <div class="chips" style="margin-top:10px;">
-    <div class="chip" data-q="Ada Lovelace"><i class="fa-solid fa-user"></i> Who is Ada Lovelace?</div>
-    <div class="chip" data-q="OpenAI website"><i class="fa-solid fa-globe"></i> Find OpenAI website</div>
+    <div class="chip" data-q="Alexander The Great"><i class="fa-solid fa-user"></i> Who is Alexander The Great?</div>
+    <div class="chip" data-q="Open Ai"><i class="fa-solid fa-globe"></i> Find OpenAI website</div>
     <div class="chip" data-q="Black hole images"><i class="fa-solid fa-image"></i> Black hole images</div>
   </div>`;
   const b=appendBotBubble();
@@ -408,3 +408,4 @@ window.addEventListener('beforeunload',clearChat);
 
 </body>
 </html>
+
